# shared-list

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  deploy.sh  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  progress.md  pyproject.toml  test_api.py  test_docker.py
.clinerules/: README.md
.clinerules/workflows/: deploy.md
app/: database.py  main.py
app/static/: app.js  manifest.json  robots.txt  styles.css
app/templates/: index.html
tests/: basic-pwa.spec.ts  browser_error_capture.py  server_manager.py  test_api.py  test_docker.py  test_pwa_dual.py  test_pwa_functionality.py
tests/playwright/: global-setup.ts  global-teardown.ts  playwright.config.ts  start-test-servers.sh  stop-test-servers.sh
