[project]
name = "shared-list"
version = "1.0.1"
description = "A shared shopping list PWA with FastAPI backend and SQLite database"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "fastapi>=0.104.0,<0.112.0",
    "uvicorn[standard]>=0.24.0,<0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "requests>=2.32.5",
    "playwright>=1.57.0",
]
